--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lucide-react": "^0.453.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "react-icons": "^5.5.0",
     "react-parallax-tilt": "^1.7.158",
     "react-router-dom": "^5.3.0",
     "react-simple-typewriter": "^3.0.1",
